@@ -488,8 +488,10 @@ This sample allows to test keyboard navigation (mostly done using the
 \texttt{\textsc{TAB}} key, hence the sample name) between different controls.
 It shows the use of 
 \helpref{wxWindow::MoveBeforeInTabOrder()}{wxwindowmovebeforeintaborder} and 
-\helpref{MoveAfterInTabOrder()}{wxwindowmoveafterintaborder} methods and of the
-wxNavigationKeyEvent.
+\helpref{MoveAfterInTabOrder()}{wxwindowmoveafterintaborder} methods to change
+the default order of the windows in the navigation chain and of 
+\helpref{wxWindow::Navigate()}{wxwindownavigate} for moving focus along this
+chain.
 
 
 \subsection{Text sample}\label{sampletext}
